Sat Sep 14 22:39:11 BST 2002  Olly Betts <olly@survex.com>

	* configure.in,tests/Makefile.am,tests/internaltest.cc: It turns out
	  that internaltest *does* need -fno-access-control, so put it back.
	  Not quite sure how I missed this.  Changed to skip refcnt tests
	  when -fno-access-control isn't available (rather than omitting them
	  entirely).

	* tests/api_db.cc: Fixed compile problem.

Sat Sep 14 21:44:34 BST 2002  Olly Betts <olly@survex.com>

	* internaltest: doesn't actually need -fno-access-control these
	  days, so removed it and the configure tests for it.

	* stemtest: recoded to be all in C++ and removed use of intermediate
	  files for random data tests - now runs ~15% faster; no longer need
	  HAVE_PERL so removed from configure.

	* apitest: use C++ streams rather than stdio; stubdb1 now cleans up
	  the temporary file it creates.

Sat Sep 14 12:54:52 BST 2002  Olly Betts <olly@survex.com>

	* docs/Makefile.am: fix "mv apidoc/latex/refman.ps avidoc.ps" which
	  fails after recent change.

Sat Sep 14 11:15:33 BST 2002  James Aylett  <tartarus@users.sourceforge.net>

	* Renamed simple* programs in quickstart docs to quickstart* to
	  avoid confusion with the simple* programs in xapian-examples.
	  (Thanks to Alex Bowley for pointing out the confusion.)

Sat Sep 14 10:00:35 BST 2002  James Aylett  <tartarus@users.sourceforge.net>

	* configure.in: returned AC_CONDITIONAL for HAVE_PERL

Sat Sep 14 09:29:08 BST 2002  Richard Boulton <richard.boulton@omsee.com>

	* buildall: change to srcdir before testing for neccessary tools
	  so that scripts which guess which autotools version to use have more
	  information available to guess with: for example, the Debian
	  autoconf version guessing script looks for "configure.ac" as a sign
	  that autoconf 2.50+ is required.

Sat Sep 14 02:50:23 BST 2002  Olly Betts <olly@survex.com>

	* docs/distributed.txt,docs/quartzdesign.html,docs/todo.xml: assorted
	  documentation updates.
